--- a/tetris.html
+++ b/tetris.html
@@ -15,7 +15,7 @@ function start(){
 function over(){
     document.onkeydown=null;
     clearInterval(run);
-    alert("GAME OVER");
+    alert("GAME OVER!!!");
 }
 function update(t){
     bak={fk:pos.fk.slice(0),y:pos.y,x:pos.x,s:pos.s};
